--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,21 +13,28 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.12.12",
+    "@hookform/resolvers": "^4.1.3",
+    "@tanstack/react-table": "^8.21.2",
     "@workspace/db": "workspace:*",
     "@workspace/ui": "workspace:*",
     "lucide-react": "^0.475.0",
-    "next": "^15.2.3",
-    "next-themes": "^0.4.4",
+    "next": "^15.2.4",
+    "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.8.16",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "qrcode.react": "^4.2.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.55.0",
+    "sonner": "^2.0.2",
+    "svix": "^1.62.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/node": "^20.17.28",
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4",
     "@workspace/eslint-config": "workspace:^",
     "@workspace/typescript-config": "workspace:*",
-    "typescript": "^5.7.3"
+    "typescript": "^5.8.2"
   }
 }
