--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-table": "^8.21.2",
     "@workspace/db": "workspace:*",
     "@workspace/ui": "workspace:*",
+    "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.475.0",
     "next": "^15.2.4",
     "next-themes": "^0.4.6",
@@ -25,6 +26,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.55.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "sonner": "^2.0.2",
     "svix": "^1.62.0",
     "zod": "^3.24.2"
